--- a/3D Projekt/DirectX Projekt/DirectX Projekt/DirectX Projekt.vcxproj
+++ b/3D Projekt/DirectX Projekt/DirectX Projekt/DirectX Projekt.vcxproj
@@ -104,6 +104,9 @@
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">5.0</ShaderModel>
     </FxCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="main.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
