--- a/3D Projekt/DirectX Projekt/DirectX Projekt/DirectX Projekt.vcxproj
+++ b/3D Projekt/DirectX Projekt/DirectX Projekt/DirectX Projekt.vcxproj
@@ -82,6 +82,7 @@
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="GameTime.cpp" />
+    <ClCompile Include="ObjImport.cpp" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="GeometryShader.hlsl">
@@ -110,6 +111,8 @@
   <ItemGroup>
     <ClInclude Include="GameTime.h" />
     <ClInclude Include="main.h" />
+    <ClInclude Include="ObjImport.h" />
+    <ClInclude Include="Root.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
